# minishell

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  main.c  memo.txt
.github/workflows/: norminette.yml
docs/: policy.md  specification.md
includes/: builtin.h  define.h  env.h  executer.h  expansion.h  heredoc.h  lexer.h  minishell.h  parser.h  typedefs.h  utils.h  xlibft.h  xsyscall.h
libft/: Makefile  get_next_line.c
libft/ft_ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_todigit.c  ft_tolower.c  ft_toupper.c
libft/ft_dlist/: dlst_assign.c  dlst_create_node.c  dlst_erase.c  dlst_pop_back.c  dlst_pop_front.c  dlst_push_back.c  dlst_push_front.c
libft/ft_list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/ft_stdio/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/ft_stdlib/: ft_abs.c  ft_atoi.c  ft_atol.c  ft_calloc.c  ft_is_integer.c  ft_is_long_value.c  ft_is_number.c  ft_itoa.c
libft/ft_string/: ft_bzero.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_replace.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  ft_strtrim.c  ft_substr.c
tests/google_tests/: CMakeLists.txt  Makefile  builtin.cpp  env.cpp  exec.cpp  expansion.cpp  heredoc.cpp  lexer.cpp  main.cpp  parser.cpp
tools/: submit.sh
(+87 files in other folders)
